# google-projects

./: .gitignore  Dockerfile  README.md  cli.py  cron.yaml  kustomization.yaml  main.py  open.py  persistent.yaml  pyproject.toml
financesync/: commands.py
financesync/google_api/: credentials.py  email_reader.py  gmail.py  sheets.py
financesync/models/: transaction.py
financesync/utils/: config.py  config_sample.py  sql_hander.py
google_api/: credentials.py  email_reader.py  gmail.py  sheets.py
models/: transaction.py
res/: categories.json
test/: test_email_parser.py
test/test_emails/: chase.html  citi.html
utils/: config.py
