[tool.poetry]
name = "financesync"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
google-api-python-client = "^2.146.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
